--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,20 @@ spring:
         format_sql: true
         show_sql: true
         default_batch_fetch_size: 100
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 146099927945-m5t9i1473otneq4sm7j16ngjkkiuh3vh.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
 mybatis:
   type-aliases-package: team7.example.ToyProject3.domain
   mapper-locations: classpath:mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
+my:
+  fileDir: C:/test/file/
