--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ekzmvlfxj@gmail.com
-    password: obqesbyeesmnjozp
+    username:
+    password:
     properties:
       mail:
         smtp:
